# potassium-egg

./: .gitmodules  GNUmakefile  README.md  kernel.c  limine.cfg  stage2.sh
.cargo/: config.toml
src/: gdt.c  gdt.h  interrupts.c  interrupts.h  klock.c  klock.h  limine_reqs.c  pmm.c  pmm.h  serial.c  serial.h  utils.c  utils.h  vmm.c  vmm.h
src/CPU/: init.c  init.h
src/Drivers/ACPI/: ACPI.c  ACPI.h
src/Drivers/APIC/: Cargo.toml  build.rs
src/Drivers/APIC/src/: lib.rs
src/Drivers/Communcation/: data.c  data.h
src/Drivers/Timers/: HPET.c  HPET.h
src/GDT/: gdt.c
src/Graphics/: graphics.c  graphics.h
src/Graphics/fonts/: linux_font_8x16.c  linux_font_8x16.h
src/Graphics/images/: bnaaa.h  deez.h  mint.c
src/Implementations/lai/: lai.c
src/Interrupts/: idtfunctions.s  interrupts.c
src/KS/ARGS/: args.c  args.h
src/Quantum/Window/: Window.c  Window.h
src/Quantum/lib/Image/: bmp.c
src/crust_test/crusty/: Cargo.toml
src/crust_test/crusty/src/: lib.rs
src/klibc/: string.c  string.h
src/klock/: klock.c  klock.h
src/kpanic/: panic.c  panic.h
src/memory/: heap.c  heap.h  pmm.c  pmm.h  vmm.c  vmm.h
src/serial/: serial.c
