[package]
name = "crust_test"
version = "1.0.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]
name = "crust"
[profile.dev]
panic = "abort"
opt-level = 1
[profile.release]
panic = "abort"
[dependencies]
x2apic = "0.4.0"